cambios sobre los controladores

--- a/FirstMVC_SQL/Views/Contacts/index.cshtml
+++ b/FirstMVC_SQL/Views/Contacts/index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<FirstMVC_SQL.Models.Contact>
 
 @{
-    ViewData["Title"] = "index";
+    ViewData["Title"] = "Index";
 }
 
 <h1>index</h1>
