--- a/FirstMVC_SQL/Views/Contacts/Create.cshtml
+++ b/FirstMVC_SQL/Views/Contacts/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="View">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
            @* <div class="form-group">
                 <label asp-for="Id" class="control-label"></label>
@@ -38,7 +38,7 @@
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
